--- a/react_frontend/src/components/Home.css
+++ b/react_frontend/src/components/Home.css
@@ -21,17 +21,17 @@ body {
   overflow: hidden;
 }
 
-.container::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" width="100" height="100"><rect width="100" height="100" fill="%23222"/><path d="M0 0 L100 100 M100 0 L0 100" stroke="%23333" stroke-width="0.5"/></svg>');
-  opacity: 0.1;
-  pointer-events: none;
-}
+/*.container::before {*/
+/*  content: "";*/
+/*  position: absolute;*/
+/*  top: 0;*/
+/*  left: 0;*/
+/*  right: 0;*/
+/*  bottom: 0;*/
+/*  background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" width="100" height="100"><rect width="100" height="100" fill="%23222"/><path d="M0 0 L100 100 M100 0 L0 100" stroke="%23333" stroke-width="0.5"/></svg>');*/
+/*  opacity: 0.1;*/
+/*  pointer-events: none;*/
+/*}*/
 
 .header-container {
   display: flex;
@@ -47,7 +47,7 @@ h1 {
   margin: 0;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
   letter-spacing: 2px;
-  animation: flicker 2s infinite;
+  /*animation: flicker 2s infinite;*/
 }
 
 .account-button {
@@ -136,7 +136,7 @@ h1 {
 }
 
 .tournament-select {
-  padding: 10px 20px;
+  padding: 8px 15px;
   background-color: #ff3333;
   color: #1a1a1a;
   border: 2px solid #ddd;
@@ -148,7 +148,7 @@ h1 {
   transition: all 0.3s ease;
   box-shadow: 3px 3px 0px #ddd;
   height: 45px;
-  top: -10px;
+  justify-content: center;
   align-items: center;
 }
 
@@ -157,7 +157,6 @@ h1 {
     color: #ff3333;
     box-shadow: 5px 5px 0px #ff3333;
 }
-
 
 .predictions-table-container {
   overflow-x: auto;
