--- a/react_frontend/src/components/Dashboard.css
+++ b/react_frontend/src/components/Dashboard.css
@@ -183,19 +183,24 @@ select {
 .tournament-header {
   display: flex;
   align-items: center;
-  margin-bottom: 1rem;
+  margin-bottom: 2rem;
   /*height: 60px;*/
 }
 
-.tournament-logo-container {
+.tournament-logo-admin-container {
   width: 60px;
   height: 60px;
   display: flex;
   justify-content: center;
   align-items: center;
   margin-right: 1rem;
-  margin-bottom: 1rem;
+  margin-bottom: 2rem;
+  background-color: #DDDDDD;
+  border: 2px solid #ff3333; /* Red border */
+  box-shadow: 0 0 10px rgba(255, 51, 51, 0.5); /* Optional: Adds some shadow for a subtle effect */
   overflow: hidden;
+  position: relative;
+  flex-shrink: 0;
 }
 
 .tournament-logo {
@@ -231,61 +236,6 @@ select {
 }
 
 
-
-/*.tournament-card {*/
-/*  background-color: var(--input-bg-color);*/
-/*  padding: 1rem;*/
-/*  border-radius: 0.5rem;*/
-/*  margin: 1rem;*/
-/*  !*width: calc(50% - 2rem);  !* Adjust based on your layout needs *!*!*/
-/*}*/
-
-/*.tournament-header {*/
-/*  display: flex;*/
-/*  align-items: center;*/
-/*  margin-bottom: 1rem;*/
-/*}*/
-
-/*.tournament-logo {*/
-/*  width: 60px;*/
-/*  height: 60px;*/
-/*  object-fit: contain;*/
-/*  margin-right: 1rem;*/
-/*}*/
-
-/*.tournament-name {*/
-/*  flex-grow: 1;*/
-/*  font-size: 1.2rem;*/
-/*  color: var(--highlight-color);*/
-/*}*/
-
-/*.tournament-actions {*/
-/*  display: flex;*/
-/*  flex-direction: column;*/
-/*}*/
-
-/*.tournament-actions button {*/
-/*  margin-top: 0.5rem;*/
-/*  width: 100%;*/
-/*}*/
-
-/*!*.tournaments-grid {*!*/
-/*!*  display: flex;*!*/
-/*!*  flex-wrap: wrap;*!*/
-/*!*  justify-content: space-between;*!*/
-/*!*}*!*/
-
-/*.tournament-card h3 {*/
-/*  font-size: 1.2rem;*/
-/*  text-align: center;*/
-/*  margin-bottom: 1rem;*/
-/*}*/
-
-/*!*.tournament-card button {*!*/
-/*!*  width: 100%;*!*/
-/*!*  margin-top: 0.5rem;*!*/
-/*!*}*!*/
-
 .tournament-name,
 .game-details {
   flex-grow: 1;
@@ -304,7 +254,11 @@ select {
   }
 }
 
-
+.game-card-started {
+  border: 2px solid #ff3333;
+  background-color: #1c1c1c;
+  box-shadow: 5px 5px 20px rgba(255, 0, 0, 0.5);
+}
 
 .edit-button {
   padding: 0.3125rem 0.625rem;
